fix: YOLO chat input text showing top

--- a/example/src/main/res/layout/fragment_input_dialog.xml
+++ b/example/src/main/res/layout/fragment_input_dialog.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<!--
   ~ The MIT License (MIT)
   ~
   ~ Copyright (c) 2016 Piasy
@@ -23,17 +23,22 @@
   -->
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:background="@android:color/transparent"
+             tools:context="com.github.piasy.multiplefragmentlayerdemo.InputDialogFragment"
         >
-    <FrameLayout
-            android:id="@+id/mLayer1"
+
+    <EditText
+            android:id="@+id/mEditText"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="50dp"
+            android:layout_gravity="bottom"
+            android:hint="type in"
+            android:textColor="@android:color/white"
+            android:textColorHint="@android:color/white"
+            android:singleLine="true"
             />
-    <FrameLayout
-            android:id="@+id/mLayer2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
+
 </FrameLayout>
