--- a/example/src/main/res/values/styles.xml
+++ b/example/src/main/res/values/styles.xml
@@ -1,11 +1,11 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+    <style name="AppTheme"
+            parent="@style/Theme.AppCompat.Light.NoActionBar">
+        <!-- actionbar background color -->
+        <item name="colorPrimary">#ffdd00</item>
+        <!-- Support library compatibility -->
+        <item name="android:windowContentOverlay">@null</item>
     </style>
-
 </resources>
